src/assets/scss/modules/_content.scss
// --------------
// VARIABLES 
// --------------
// colors
$color-white: white;
$color-projectRed: red;
/// heights
$blockHeight-1104: $baseBlockSize * 138;
$lineHeight-106: 106px;
$lineHeight-40: 40px;
$btnHeight: $baseBlockSize * 6;
// text
$btnLtrSpacing: $baseFontSize / 3.2 + px;
$titleLtrSpacing: $baseFontSize/4 + px;
.content--top {
 order: 1;
 flex-basis: 1000px;
 height: inherit;
 display: flex;
 flex: 1 0 auto;
}

.content--bottom {
 order: 2;
 flex: none;
}

.title--container,
.callout--container,
.description--container,
.skills--container {
 color: $color-white;
}

.title--container {
 height: 100px; 
}

.skills--container {
 &.bio {
  color: $color-secondaryBlue;
 }
 &.works {
  color: $color-secondaryRed;
 }
 &.projects {
  color: $color-secondaryYellow;
 }
}

.content--top > .row {
 justify-content: space-evenly;
 height: inherit;
}

.content--top,
.content--top > .row {
 position: relative;
}

.content--top .background-color {
 height: 100%;
 width: 75%;
 position: absolute;
 right: 0;
 &.bio {
  background: $color-primaryBlue;
 }
 &.works {
  background: $color-primaryRed;
 }
 &.projects {
  background: $color-primaryYellow;
 }
}

.content--top .pitch {
 z-index: 1;
 padding: 0 64px 0 64px;
}

.content--top .slideshow,
.content--top .pitch {
 display: flex;
 z-index: 1;
}

.content--top .pitch {
 flex-direction: row;
 flex-wrap: wrap;
}

.content--top .slideshow {
 flex-direction: row;
 flex-wrap: wrap;
}

.image--container {
 min-height: $blockHeight-1104;
 min-height: 1256px;
 height: 90%;
}

.image {
 background: url("../images/claron.png");
 background-size: 100%;
 height: 100%;
 background-repeat: no-repeat;
}

.title {
 letter-spacing: $titleLtrSpacing;
}

.title--underline {
 background: white;
 height: $baseBlockSize / 2;
 border-radius: 8px;
}

.callout {
 font-family: 'gt-ultraBold';
 text-transform: uppercase;
 line-height: $lineHeight-106;
 color: $color-white;
}

.description {
 font-family: 'gt-light';
 letter-spacing: 0.5px;
 line-height: $lineHeight-40;
}

.skills {
 font-family: 'gt-light';
 text-transform: capitalize;
 display: flex;
}

.skills:nth-child(2),
.skills:nth-child(5) {
 justify-content: center;
}

.skills:nth-child(3),
.skills:nth-child(6) {
 justify-content: flex-end;
}

.skill {
 @include font-size($font-caption);
}

